# cora_boletos

./: .dockerignore  .env.example  .gitignore  Dockerfile  MANIFEST.in  README.md  README_DOCKER.md  README_SETUP.md  __init__.py  app.py  docker-compose.yml  lib_setup.py  pyproject.toml  requirements.txt  setup.py  setup_app.py
docs/: API.md  APP_WEB.md  CHANGELOG.md  CONFIGURACAO.md  EXEMPLOS.md  TROUBLESHOOTING.md  api.md
examples/: README.md  config.example.yaml  exemplo_clientes.xlsx  gerar_boleto_direto.py
libs/: __init__.py  auth.py  cli.py  consulta.py  gerador.py
scripts/: gerar_boletos.py
templates/: base.html  index.html  listar_boletos.html  visualizar.html
tests/: README.md  __init__.py  conftest.py  test_auth.py  test_gerador.py  test_validacoes.py
