[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cora_boletos"
dynamic = ["version"]
description = "Sistema de geração automatizada de boletos utilizando a API da Cora"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Afonso Carvalho", email = "afonso@email.com"}
]
maintainers = [
    {name = "Afonso Carvalho", email = "afonso@email.com"}
]
keywords = ["boleto", "cora", "api", "pagamento", "financeiro", "cobrança"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "pyyaml>=5.4.0",
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]

[project.scripts]
cora-boletos = "libs.cli:main"

[project.urls]
Homepage = "https://github.com/afonsorcarvalho/cora_boletos"
Documentation = "https://github.com/afonsorcarvalho/cora_boletos/tree/main/docs"
Repository = "https://github.com/afonsorcarvalho/cora_boletos"
"Bug Tracker" = "https://github.com/afonsorcarvalho/cora_boletos/issues"

[tool.setuptools_scm]
write_to = "libs/_version.py"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=libs --cov-report=term-missing"